<resources>
    <string name="app_name">tikiapp</string>
    <string name="register_app_name">Evaluacion Continua 2</string>
    <string name="register_title">Register</string>
    <string name="register_title_boton">Continue</string>
    <string name="register_input_hint_fullName">Full Name</string>
    <string name="register_fullName_input_content_description_end_icon">FullName</string>
    <string name="register_fullName_input_hint">Full Name</string>
    <string name="register_input_hint_email">Email</string>
    <string name="register_email_input_content_description_end_icon">Email</string>
    <string name="register_email_input_hint">Email</string>
    <string name="register_nickname_input_hint">Nickname</string>
    <string name="register_nickname_input_content_description_end_icon">Nickname</string>
    <string name="register_phoneNumber_input_hint">Phone Number</string>
    <string name="register_phoneNumber_input_content_description_end_icon">Phone Number</string>
    <string name="register_emailId_input_hint">Email ID</string>
    <string name="register_emailId_input_content_description_end_icon">Email ID</string>
    <string name="register_password_input_hint">Password</string>
    <string name="register_password_input_content_description_end_icon">Password</string>
    <string name="login_title">Login</string>
    <string name="login_titleG">Login with Google</string>

</resources>